--- a/style.css
+++ b/style.css
@@ -10,24 +10,21 @@
    
 body {
 	background-color: #f0e4ee;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	min-height: 100hv;
 	}
 
+header,main,footer{
+	display: block;
+	margin: 0 auto; 
+	max-width: 1000px;	
+}
+
 header {
-	position: relative;
 	owerflow: hidden; 		
-	width: 100%;
 	height: 20px;
 	margin-bottom: 0px;
-	}
-	
-.container_head {
-	position: relative;
-	background-color:#d2a880;
-	}
+}
+
 .head_inner {
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -38,13 +35,13 @@ header {
 	ms-align-items: center;
 	align-items:center;
 	margin-right: 50px;
-	}
+}
 	
 .head_inner .logo {
 	font-size: 20px;
 	color:#a0622c;
 	margin-left: 60px;
-	}
+}
 	
 .head_inner nav ul{
 	margin: 0;
